css/notifcenter.css
.clearfix {
	*zoom: 1;
}

.clearfix:before, .clearfix:after {
	display: table;
	content: "";
	line-height: 0;
}

.clearfix:after {
	clear: both;
}

.hide-text {
	font: 0/0 a;
	color: transparent;
	text-shadow: none;
	background-color: transparent;
	border: 0;
}

.input-block-level {
	display: block;
	width: 100%;
	min-height: 30px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

a, a:hover {
	text-decoration: none;
}

body {
	overflow-x: hidden;
	overflow-y: auto;
}

#notificationcenteroverlay {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1001;
}

#notificationcentermain {
	width: 100%;
	height: 100%;
	position: relative;
	top: 0;
	overflow-x: hidden;
	overflow-y: auto;
}

#notificationcenterpanel {
	width: 300px;
	height: 100%;
	overflow-y: auto;
	min-height: 600px;
	position: absolute;
	top: 0;
	right: 0;
	-webkit-box-shadow: inset 2px 0 5px 1px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: inset 2px 0 5px 1px rgba(0, 0, 0, 0.5);
	box-shadow: inset 2px 0 5px 1px rgba(0, 0, 0, 0.5);
	color: #fff;
	background-color: #333;
}

#notificationcenterpanel .nonew {
	height: 100%;
	width: 100%;
	display: table;
	text-align: center;
	font-size: 16px;
	font-weight: bold;
	color: #fff;
}

#notificationcenterpanel .nonew div {
	display: table-cell;
	vertical-align: middle;
}

.notificationul {
	list-style: none;
	margin: 0;
	padding: 0;
	position: absolute;
	top: 0;
	right: 0;
	overflow: hidden;
	overflow-y: auto;
	height: 100%;
	width: 350px;
}

.notificationul li {
	margin: 20px;
	position: relative;
	right: 0;
	display: none;
	z-index: 1001;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-webkit-box-shadow: 0 2px 1px 0 #f2f2f2;
	box-shadow: 0 2px 1px 0 #f2f2f2;
	cursor: pointer;
}

.notification {
	position: relative;
	min-height: 64px;
	width: 300px;
	background-color: #fff;
	color: #333;
	font-size: 12px;
	border-radius: 8px;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	box-shadow: 3px 3px 6px #333;
	-moz-box-shadow: 3px 3px 6px #333;
	-webkit-box-shadow: 3px 3px 6px #333;
	display: table;
	vertical-align: top;
	opacity: 0.95;
	-moz-opacity: 0.95;
	-webkit-opacity: 0.95;
	-khtml-opacity: 0.95;
	filter: alpha(opacity=95);
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=95)";
}

.notification a, .notification a:hover {
	text-decoration: none;
	color: #4aaafc;
}

.notifcenterbox {
	position: relative;
	background-color: #333;
	font-size: 12px;
	display: table;
	width: 275px;
	padding: 5px;
	padding-left: 20px;
	border-collapse: initial;
}

.notifcenterbox .notiftext {
	display: table-cell;
	padding-right: 10px;
}

.notifcenterbox .notiftime {
	display: table-cell;
	width: 1px;
	white-space: nowrap;
}

.centerlist .closenotif {
	position: absolute;
	width: 12px;
	height: 12px;
	top: 2px;
	right: 9px;
	cursor: pointer;
	background-color: #111;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
	border-radius: 100px;
	text-align: center;
	font-size: 12px;
	line-height: 1px;
	color: #555;
	padding: 1px;
}

.behind {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	right: 0;
	overflow: hidden;
}

.behind span.ui-btn {
	width: 68px;
	margin: 0px;
	position: absolute;
	right: 0;
	border: none;
	height: 100%;
	text-align: center;
	display: table;
	border-bottom: 1px solid #555;
}

.behind .delete-btn,
.behind .delete-btn:active,
.behind .delete-btn:visited,
.behind .delete-btn:focus,
.behind .delete-btn:hover {
	color: white;
	background-color: red;
	text-shadow: none;
}

.behind a.delete-btn {
	display: table-cell;
	vertical-align: middle;
}

.centerheader .notiftypecount {
	display: inline;
	font-size: 80%;
}

.notification .iconnotif {
	width: 32px;
	display: table-cell;
	vertical-align: top;
}

.notification .iconnotifimg {
	width: 32px;
	margin: 10px;
}

.notification .iconnotifimg i {
	font-size: 32px;
	width: 32px;
	text-align: center;
}

.notification .iconnotifimg img {
	width: 100%;
	height: 100%;
}

.notification .contentnotif {
	padding: 10px;
	padding-left: 0px;
	display: table-cell;
	vertical-align: top;
}

.notification .buttonnotif {
	display: table-cell;
	width: 20px;
}

.notification .buttonnotif .btn {
	text-transform: capitalize;
	display: inline-block;
	*display: inline;
	*zoom: 1;
	width: 40px;
	padding: 0px 5px;
	margin-top: 6px;
	margin-right: 10px;
	margin-bottom: 0;
	font-size: 10px;
	line-height: 20px;
	text-align: center;
	vertical-align: middle;
	cursor: pointer;
	color: #333;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
	background-color: #f5f5f5;
	background-image: -moz-linear-gradient(top, #fff, #e6e6e6);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e6e6e6));
	background-image: -webkit-linear-gradient(top, #fff, #e6e6e6);
	background-image: -o-linear-gradient(top, #fff, #e6e6e6);
	background-image: linear-gradient(to bottom, #fff, #e6e6e6);
	background-repeat: repeat-x;
	filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	*background-color: #e6e6e6;
	filter: progid: DXImageTransform.Microsoft.gradient(enabled = false);
	border: 1px solid #ccc;
	*border: 0;
	border-bottom-color: #b3b3b3;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	*margin-left: .3em;
	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
}

.notification .buttonnotif .btn:hover {
	color: #333;
	text-decoration: none;
	background-position: 0 -15px;
	-webkit-transition: background-position .1s linear;
	-moz-transition: background-position .1s linear;
	-o-transition: background-position .1s linear;
	transition: background-position .1s linear;
}

.centerlist ul li h3,
.notification .contentnotif h3 {
	padding: 0;
	margin: 0;
	margin-bottom: 5px;
	font-weight: bold;
	font-size: 14px;
	line-height: 14px;
	text-transform: capitalize;
}

.centerlist ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.centerlist ul li {
	border-bottom: 2px groove #555;
	position: relative;
	cursor: pointer;
}

.centerheader {
	position: relative;
	height: 14px;
	line-height: 12px;
	text-transform: capitalize;
	font-weight: bold;
	font-size: 14px;
	padding: 2px;
	padding-left: 20px;
	width: 280px;
	border-bottom: 1px solid #111;
}

.centerheader > i,
.centerheader > img {
	padding-right: 10px;
	width: 14px;
	height: 14px;
	position: absolute;
	top: 2px;
	left: 2px;
	font-size: 14px;
}

.notificationcentericon {
	position: relative;
	top: 0;
	left: 0;
}

.notificationcentericon[data-counter]:after {
	content: attr(data-counter);
	position: absolute;
	top: -1em;
	right: -1em;
	padding: 3px 9px;
	border: 2px solid white;
	border-radius: 100px;
	background: linear-gradient(top, #ff0000 0, #a11e1e 100%);
	background: -webkit-linear-gradient(top, #ff0000 0, #a11e1e 100%);
	background: -moz-linear-gradient(top, #ff0000 0, #a11e1e 100%);
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.4), 0 0 1px rgba(0, 0, 0, 0.7) inset, 0 10px 0 rgba(255, 255, 255, 0.11) inset;
	background-clip: padding-box;
	font: bold 12px/18px"Helvetica Neue", sans-serif;
	color: white;
	text-decoration: none;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.6);
}

